--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -92,9 +92,10 @@
   "dependencies": {
     "amplitude-js": "^8.1.0",
     "balloon-css": "^1.2.0",
-    "node-fetch": "^2.6.1",
     "lazysizes": "^5.3.2",
     "linkifyjs": "^2.1.9",
+    "node-fetch": "^2.6.1",
+    "react-virtual": "^2.7.1",
     "subscriptions-transport-ws": "^0.9.18"
   }
 }
