--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -25,7 +25,8 @@
     "react-intersection-observer": "^8.31.0",
     "react-modal": "^3.12.1",
     "react-query": "^3.13.8",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "react-virtual": "^2.7.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.14.1",
@@ -83,6 +84,7 @@
     "react-modal": "^3.12.1",
     "react-query": "^3.13.8",
     "react-transition-group": "^4.4.1",
+    "react-virtual": "^2.7.1",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
     "tailwindcss": "^2.1.1",
@@ -92,9 +94,9 @@
   "dependencies": {
     "amplitude-js": "^8.1.0",
     "balloon-css": "^1.2.0",
-    "node-fetch": "^2.6.1",
     "lazysizes": "^5.3.2",
     "linkifyjs": "^2.1.9",
+    "node-fetch": "^2.6.1",
     "subscriptions-transport-ws": "^0.9.18"
   }
 }
