--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
   "version": "0.0.0",
-  "name": "daily.dev | All-in-one developer news reader",
+  "name": "daily.dev | The Home Page Every Developer Deserves",
   "short_name": "daily.dev",
-  "description": "daily.dev is the easiest way to stay updated on the latest programming news",
+  "description": "Get a feed of the hottest developer news personalized to you.",
   "homepage_url": "https://daily.dev",
   "icons": {
     "16": "icons/16.png",
