--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -99,6 +99,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@tippyjs/react": "^4.2.5",
     "amplitude-js": "^8.8.0",
     "balloon-css": "^1.2.0",
     "flagsmith": "^1.6.7",
@@ -106,7 +107,6 @@
     "linkifyjs": "^2.1.9",
     "lodash.clonedeep": "^4.5.0",
     "node-fetch": "^2.6.5",
-    "react-popper-tooltip": "^4.3.0",
     "subscriptions-transport-ws": "^0.9.19"
   }
 }
