--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -12,11 +12,12 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-tailwindcss": "^1.16.1",
     "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "@typescript-eslint/parser": "^4.22.0",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jest-dom": "^3.8.0",
     "eslint-plugin-prettier": "^3.3.1",
