--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -87,6 +87,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-tailwindcss": "^1.16.1",
     "eslint-plugin-testing-library": "^4.12.4",
     "fake-indexeddb": "^3.1.3",
     "filemanager-webpack-plugin": "^3.0.0-alpha.7",
