--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-tailwindcss": "^1.16.1",
     "eslint-plugin-testing-library": "^4.12.4",
     "fake-indexeddb": "^3.1.3",
     "glob": "^7.2.0",
