--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -12,6 +12,7 @@
   },
   "prettier": "@dailydotdev/prettier-config",
   "peerDependencies": {
+    "@dailydotdev/react-contexify": "^5.0.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.22.1",
     "dompurify": "^2.3.0",
@@ -20,7 +21,6 @@
     "idb-keyval": "^5.0.6",
     "next": "^10.2.3",
     "react": "^17.0.5",
-    "@dailydotdev/react-contexify": "^5.0.0",
     "react-dom": "^17.0.5",
     "react-intersection-observer": "^8.31.0",
     "react-modal": "^3.14.3",
@@ -34,6 +34,7 @@
     "@babel/preset-typescript": "^7.16.0",
     "@dailydotdev/eslint-config": "*",
     "@dailydotdev/prettier-config": "*",
+    "@dailydotdev/react-contexify": "^5.0.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/react-hooks": "^7.0.2",
@@ -55,6 +56,7 @@
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.25.0",
+    "date-fns-tz": "^1.1.6",
     "dompurify": "^2.3.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -86,7 +88,6 @@
     "postcss-simple-vars": "^6.0.3",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
-    "@dailydotdev/react-contexify": "^5.0.0",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.2",
     "react-modal": "^3.14.3",
