--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -15,7 +15,7 @@
     "@dailydotdev/react-contexify": "^5.0.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.22.1",
-    "date-fns-tz": "^1.1.6",
+    "date-fns-tz": "1.0.0",
     "dompurify": "^2.3.0",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
@@ -57,7 +57,7 @@
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.25.0",
-    "date-fns-tz": "^1.1.6",
+    "date-fns-tz": "1.0.0",
     "dompurify": "^2.3.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
